--- a/cloud-consumer-order/pom.xml
+++ b/cloud-consumer-order/pom.xml
@@ -11,12 +11,9 @@
 	<artifactId>cloud-consumer-order</artifactId>
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
+			<groupId>org.example</groupId>
+			<artifactId>cloud-common</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
