--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 		<module>cloud-provider-pay</module>
 		<module>cloud-consumer-order</module>
 		<module>cloud-common</module>
+		<module>cloud-eureka-server</module>
 	</modules>
 	<!-- 统一管理jar包版本 -->
 	<properties>
