--- a/pom.xml
+++ b/pom.xml
@@ -25,17 +25,15 @@
 		<druid.version>1.1.16</druid.version>
 		<mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
 	</properties>
+	<!--spring boot 2.2.2-->
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.2.2.RELEASE</version>
+	</parent>
 	<!-- 子模块继承之后，提供作用：锁定版本+子modlue不用写groupId和version  -->
 	<dependencyManagement>
 		<dependencies>
-			<!--spring boot 2.2.2-->
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-dependencies</artifactId>
-				<version>2.2.2.RELEASE</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
 			<!--spring cloud Hoxton.SR1-->
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
@@ -90,10 +88,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<fork>true</fork>
-					<addResources>true</addResources>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
