--- a/cloud-provider-pay/src/main/resources/application.yml
+++ b/cloud-provider-pay/src/main/resources/application.yml
@@ -15,4 +15,9 @@ mybatis:
   mapperLocations: classpath:mapper/*.xml
   type-aliases-package: com.example.cloud.pay.entities
 
-
+eureka:
+  client:
+    register-with-eureka: true
+    fetchRegistry: true
+    service-url:
+      defaultZone: http://localhost:7001/eureka
