--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<module>cloud-consumer-order</module>
 		<module>cloud-common</module>
 		<module>cloud-eureka-server</module>
+		<module>cloud-eureka-server-dup</module>
 	</modules>
 	<!-- 统一管理jar包版本 -->
 	<properties>
