--- a/cloud-provider-pay/src/main/resources/application.yml
+++ b/cloud-provider-pay/src/main/resources/application.yml
@@ -23,3 +23,5 @@ eureka:
       defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
   instance:
     instance-id: ${spring.application.name}:${server.port}
+    # 优先使用IP而不是其他方式（比如微服务名称）显示
+    prefer-ip-address: true
