--- a/cloud-eureka-server/src/main/resources/application.yml
+++ b/cloud-eureka-server/src/main/resources/application.yml
@@ -12,7 +12,14 @@ eureka:
     fetch-registry: false
     service-url:
       #设置与eureka server交互的地址查询服务和注册服务都需要依赖这个地址
-      defaultZone: http://eureka7002.com:7002/eureka/
+      # defaultZone: http://eureka7002.com:7002/eureka/
+      # 开启单机模式
+      defaultZone: http://eureka7001.com:7001/eureka/
+  server:
+    # 关闭Eureka的保护模式
+    enable-self-preservation: false
+    # 如果两秒没有发送，那么代表着需要剔除，默认为90秒
+    eviction-interval-timer-in-ms: 2000
 spring:
   application:
     name: eureka-server
