(+)配置Feign的输出日志级别

--- a/cloud-consumer-order/src/main/resources/application.yml
+++ b/cloud-consumer-order/src/main/resources/application.yml
@@ -24,4 +24,6 @@ ribbon:
   ReadTimeout:  5000
   # 设置最大连接时间
   ConnectTimeout: 5000
-
+logging:
+  level:
+    com.example.cloud.order.service.IPaymentService: debug
