--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<module>cloud-common</module>
 		<module>cloud-eureka-server</module>
 		<module>cloud-eureka-server-dup</module>
+		<module>cloud-hystrix-provider-pay</module>
 	</modules>
 	<!-- 统一管理jar包版本 -->
 	<properties>
