--- a/cloud-consumer-order/src/main/resources/application.yml
+++ b/cloud-consumer-order/src/main/resources/application.yml
@@ -27,3 +27,8 @@ ribbon:
 logging:
   level:
     com.example.cloud.order.service.IPaymentService: debug
+feign:
+  hystrix:
+    # 处理客户端的熔断
+    # 如果处理自身的容错就开启。开启方式与生产端不一样。
+    enabled: true
