--- a/cloud-consumer-order/src/main/resources/application.yml
+++ b/cloud-consumer-order/src/main/resources/application.yml
@@ -8,9 +8,9 @@ eureka:
     register-with-eureka: true
     fetchRegistry: true
     service-url:
-      # defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
+      # defaultZone: http://127.0.0.1:7001/eureka,http://127.0.0.1:7002/eureka
       # 单机模式
-      defaultZone: http://eureka7001.com:7001/eureka
+      defaultZone: http://127.0.0.1:7001/eureka
   instance:
     instance-id: ${spring.application.name}:${server.port}
     # 优先使用IP而不是其他方式（比如微服务名称）显示
