--- a/cloud-eureka-server-dup/src/main/resources/application.yml
+++ b/cloud-eureka-server-dup/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 eureka:
   instance:
     #eureka服务端的实例名字
-    hostname: eureka7002.com
+    hostname: 127.0.0.1
   client:
     #表示不向注册中心注册自己
     register-with-eureka: false
@@ -12,7 +12,7 @@ eureka:
     fetch-registry: false
     service-url:
       #设置与eureka server交互的地址查询服务和注册服务都需要依赖这个地址
-      defaultZone: http://eureka7001.com:7001/eureka/
+      defaultZone: http://127.0.0.1:7001/eureka/
 spring:
   application:
     name: eureka-server
