--- a/cloud-hystrix-provider-pay/src/main/resources/application.yml
+++ b/cloud-hystrix-provider-pay/src/main/resources/application.yml
@@ -8,7 +8,7 @@ eureka:
     #表示自己就是注册中心，职责是维护服务实例，并不需要去检索服务
     fetch-registry: true
     service-url:
-      defaultZone: http://eureka7001.com:7001/eureka/
+      defaultZone: http://127.0.0.1:7001/eureka/
 
 spring:
   application:
