--- a/cloud-provider-pay/src/main/resources/application.yml
+++ b/cloud-provider-pay/src/main/resources/application.yml
@@ -6,8 +6,8 @@ spring:
     name: cloud-payment-service
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: org.gjt.mm.mysql.Driver
-    url: jdbc:mysql://192.168.225.133:3306/cloud?useUnicode=true&characterEncoding=utf-8&useSSL=false&Timezone=Asia/Shanghai
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://159.75.122.3:3306/cloud?useUnicode=true&characterEncoding=utf-8&useSSL=false&Timezone=Asia/Shanghai
     username: root
     password: 123123
 
@@ -20,9 +20,9 @@ eureka:
     register-with-eureka: true
     fetchRegistry: true
     service-url:
-      # defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
+      # defaultZone: http://127.0.0.1:7001/eureka,http://127.0.0.1:7002/eureka
       # 单机模式
-      defaultZone: http://eureka7001.com:7001/eureka
+      defaultZone: http://127.0.0.1:7001/eureka
   instance:
     instance-id: ${spring.application.name}:${server.port}
     # 优先使用IP而不是其他方式（比如微服务名称）显示
