(*)添加消息中间件的消息发送和接受

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 		<module>cloud-eureka-server</module>
 		<module>cloud-eureka-server-dup</module>
 		<module>cloud-hystrix-provider-pay</module>
+		<module>cloud-stream-producer</module>
+		<module>cloud-stream-consumer</module>
 	</modules>
 	<!-- 统一管理jar包版本 -->
 	<properties>
