(+)配置feign调用nacos服务

--- a/cloud-nacos-order/pom.xml
+++ b/cloud-nacos-order/pom.xml
@@ -42,5 +42,10 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- feign远程调用依赖 -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
 	</dependencies>
 </project>
