--- a/cloud-nacos-order/pom.xml
+++ b/cloud-nacos-order/pom.xml
@@ -47,5 +47,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
+		<!--nacos-config-->
+		<dependency>
+			<groupId>com.alibaba.cloud</groupId>
+			<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+		</dependency>
 	</dependencies>
 </project>
