--- a/cloud-nacos-order/src/main/resources/application.yml
+++ b/cloud-nacos-order/src/main/resources/application.yml
@@ -1,17 +1,3 @@
-server:
-  port: 9010
-
 spring:
-  application:
-    name: nacos-order
-  cloud:
-    nacos:
-      discovery:
-        #配置Nacos地址
-        server-addr: 159.75.122.3:8848
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: '*'
+  profiles:
+    active: dev
