--- a/cloud-nacos-order/src/main/resources/bootstrap.yml
+++ b/cloud-nacos-order/src/main/resources/bootstrap.yml
@@ -13,6 +13,11 @@ spring:
         server-addr: 159.75.122.3:8848
         #指定yaml格式的配置
         file-extension: yaml
+    sentinel:
+      transport:
+        dashboard: 159.75.122.3:8858
+        #默认8719，假如被占用了会自动从8719开始依次+1扫描。直至找到未被占用的端口
+        port: 8719
 management:
   endpoints:
     web:
